# n8n-cli

./: .env.example  .gitignore  LLM.md  README.md  check_n8n.py  config.py  get_node_schema.py  main.py  node_index.json  nvidia_tool_calling_demo.py  openai_tool_calling_demo.py  pyproject.toml  requirements.txt  startup.py
adk_test/: .env.example  agent.py
adk_test/tools/: __init__.py  n8n_client.py  n8n_tools.py
core/: __init__.py  agent.py  context.py  prompt.py  tools.py  validator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Architecture.tsx  CompilerShowcase.tsx  DecryptedText.tsx  Features.tsx  Footer.tsx  Hero.tsx  Icons.tsx  Navbar.tsx  Outcomes.tsx  Reviews.tsx  Setup.tsx  Templates.tsx  TerminalShowcase.tsx  TerminalSimulator.tsx  WorkflowBuilder.tsx
frontend/src/diffs/: Architecture.diff  CompilerShowcase.diff  Features.diff  Footer.diff  Hero.diff  Navbar.diff  Outcomes.diff  (+4 more)
n8n/: __init__.py  client.py  node_parser.py  schemas.py
n8n_agent/: __init__.py  agent.py  client.py  developer.py
n8n_agent/templates/: http_request.json  schedule_trigger.json  webhook_trigger.json
n8n_agent/tools/: __init__.py  activate_workflow.py  create_workflow.py  delete_workflow.py  get_credentials.py  get_execution_details.py  get_executions.py  get_memory.py  get_node_summary.py  get_templates.py  get_workflow.py  helpers.py  list_workflows.py  memory_store.py  save_memory.py  update_workflow.py  web_search.py
storage/: __init__.py  backup.py  cache.py  db.py  memory.py
