[project]
name = "n8n-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.33.0",
    "httpx>=0.27.0",
    "litellm>=1.85.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.9.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]
