[project]
name = "n8n-cli"
version = "0.1.0"
description = "AI-powered CLI agent that creates, edits, and manages n8n workflows using natural language."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.33.0",
    "httpx>=0.27.0",
    "litellm>=1.85.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.9.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
n8n-agent = "main:main"

